--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 	"version": "1.0",
     "license": "MIT",
     "require": {
-        "php": ">=8.2"
+        "php": ">=8.2",
+        "nette/php-generator": "^4.0"
     },
     "autoload": {
 		"psr-4": {
